2008-07-02  Perry McFarlane  <perry_m@fastmail.fm>
* javanvm/atari_javanvm.c: compile without SOUND
* atari_sdl.c: name changes
* sndsave.[ch], atari.c, pokeysnd.c, ui.c: rename externals with SndSave_
* statesav.[ch], antic.c, atari.c, cartridge.c, cpu.c, dc/atari_dc.c, gtia.c,
memory.c, pbi.c, pbi_bb.c, pbi_mio.c, pbi_xld.c, pia.c, pokey.c, sio.c, ui.c,
xep80.c: rename externals with StateSav_
* log.[ch], antic.c, atari.c, atari_basic.c, atari_curses.c, atari_falcon.c,
atari_ntsc.c, atari_ps2.c, atari_sdl.c, atari_svgalib.c, atari_x11.c,
binload.c, cassette.c, colours.c, devices.c, dos/atari_vga.c, dos/dos_sb.c,
dos/sound_dos.c, input.c, javanvm/atari_javanvm.c, memory.c, pbi_bb.c,
pbi_mio.c, pbi_xld.c, rdevice.c, remez.c, rtime.c, screen.c, sio.c,
sound_oss.c, statesav.c, ui_basic.c, win32/atari_win32.c, win32/joystick.c,
win32/screen_win32.c, win32/sound.c, wince/port/atari_wince.c,
wince/port/sound.c, xep80.c: rename externals with Log_, Aprint -> Log_print
Aflushlog -> Log_flushlog.
* compfile.[ch], sio.c, ui.c rename CompressedFile_ to CompFile_ so that it
matches the filename.
* xep80_fonts.[ch] xep80.c: rename externals with XEP80_Fonts_.
* votrax.[ch], pbi_xld.c: rename externals with Votrax_, UINT16 -> SWORD.
* binload.[ch], atari.c, cartridge.c, devices.c, sio.c: rename externals with
BINLOAD_
* colours.[ch], atari.[ch], atari_falcon.c, atari_ps2.c, atari_sdl.c,
atari_svgalib.c, atari_x11.c, dc/atari_dc.c, dos/atari_vga.c, atari_javanvm.c,
screen.c, win32/screen_win32.c, wince/port/screen_wince.cpp: rename externals
with Colours_, Palette -> Colours_ so that it matches the filename.
* screen.[ch], antic.c, atari.[ch], atari_falcon.c, atari_ps2.c, atari_sdl.c,
atari_x11.c, dc/atari_dc.c, dos/atari_vga.c, input.c, screen.[ch], ui.c,
ui_basic.c, win32/atari_win32.c, wince/port/atari_wince.c, wince/port/main.c,
wince/port/screen_wince.cpp: rename externals to Screen_, atari_screen ->